--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright © 2021 Leeek Kitchen - Courtesy of: <a href="https://www.adefemikolawole.com/">Folakol Technologies</a></p>
+              <p>Copyright © 2021 Leees Kitchen - Courtesy of: <a href="https://www.adefemikolawole.com/">Folakol Technologies</a></p>
             </div>
           </div>
         </div>
