--- a/menu.html
+++ b/menu.html
@@ -173,7 +173,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright © 2020 Company Name - Template by: <a href="https://www.phpjabbers.com/">PHPJabbers.com</a></p>
+              <p>Copyright © 2021 Leees Kitchen - Courtesy of: <a href="https://www.adefemikolawole.com/">Folakol Technologies</a></p>
             </div>
           </div>
         </div>
