--- a/about-us.html
+++ b/about-us.html
@@ -140,7 +140,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright © 2021 Leees Kitchen - Courtesy of: <a href="https://www.adefemikolawole.com/">Folakol Technologies</a></p>
+              <p>Copyright © 2021 Leees Kitchen - Courtesy of: <a href="https://www.folakol.com/">Folakol Technologies</a></p>
             </div>
           </div>
         </div>
